Couleurs dans le tableau des événements masqués.
Change-Id: Iea3bdd1392e0e58ac88d6def5e6fdbd092202a90
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/469
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/raw_events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/raw_events_table.html
@@ -144,9 +144,13 @@
                 </py:with>
                 <td class="plugin_hostname">${entry.hostname}</td>
                 <td class="plugin_servicename">${entry.servicename}</td>
-                <td class="plugin_state">${StateName.value_to_statename(entry[0].initial_state)}</td>
-                <td class="plugin_state">${StateName.value_to_statename(entry[0].current_state)}</td>
-                <td class="plugin_state">${StateName.value_to_statename(entry[0].peak_state)}</td>
+                <td py:with="initial_state = StateName.value_to_statename(entry[0].initial_state)"
+                    class="plugin_state ${initial_state}">${initial_state}</td>
+                <td py:with="current_state = StateName.value_to_statename(entry[0].current_state)"
+                    class="plugin_state ${current_state}">${current_state}</td>
+                <td py:with="peak_state = StateName.value_to_statename(entry[0].peak_state)"
+                    class="plugin_state ${peak_state}">${peak_state}</td>
+                <td class="plugin_output">${entry[0].message}</td>
                 <td class="plugin_output">${entry[0].message}</td>
 	            <td class="plugin_history">
 	            	<a href="${tg.url('/event/%d' % entry[0].idevent)}"><img src="${tg.url('/images/history.png')}" title="History" alt="History"/></a></td>
