Meilleures performances pour VigiMap (#879).
Améliore grandement les performances de VigiMap lors du chargement de
grosses cartes (testé avec 900 services à l'écran) :
* Modifie la méthode status_all() du !StatusController pour récupérer en
  quelques requêtes SQL l'état de tous les éléments de la carte (au lieu
  de simplement récupérer les ID des objets et faire des requêtes SQL
  individuelles ensuite pour récupérer l'état de chaque objet).
* Modifie le code JS pour diminuer le nombre de reflows du contenu de la
  page.
* Modifie le placement automatique des objets pour qu'il soit réalisé
  automatiquement par le navigateur (CSS) plutôt que grâce à du code JS.

Résultats de quelques benchmarks :
* Les changements sur le JS ont permis de multiplier par 10 à 25 la
  vitesse de création et de mise à jour de l'état des éléments de la
  carte (passage de > 10 secondes à < 1 seconde sur les cartes les plus
  chargées).
* Les changements sur les requêtes SQL ont permis d'améliorer les
  performances par un facteur 12 (passage de > 12 secondes à < 1
  seconde).

Ces changements diminuent très fortement l'apparition des occurrences de
la boîte de dialogue "Un script sur cette page met trop de temps à
répondre [...]".

Change-Id: Ia8bdd10879584a698f78e9f5e2cc12fbd48c64b5
Refs: #879.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/496
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -67,6 +67,17 @@ h1 a:hover {
     height: 100%;
 }
 
+/* Placement automatique. */
+#automap {
+    position: absolute;
+    left: 0px;
+}
+
+#automap .obj {
+    float: left;
+    margin: 1em;
+}
+
 #loading {
     display: none;
     position: absolute;
@@ -176,6 +187,7 @@ h1 a:hover {
         remplace cette valeur pour les autres navigateurs,
         y compris pour IE 8 qui ne présente plus le bug. */
     margin: 0;
+    padding: 0px 1em;
 }
 
 .obj {
@@ -209,6 +221,8 @@ h1 a:hover {
     background-color: white;
     margin: 2px auto;
 }
+
+
 
 /* Liens */
 .link {
@@ -532,4 +546,3 @@ input[type=submit] {
 .notice {
     background: #EEEEFF url(../images/info.png) no-repeat scroll 0px center;
 }
-
