--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -127,8 +127,10 @@
             Your browser does not support the canvas element. Please upgrade.
         </canvas>
 
-        <div id="legend">
-        </div>
+        <!-- Containeur pour les éléments placés automatiquement. -->
+        <div id="automap"></div>
+        <!-- Containeur pour la légende. -->
+        <div id="legend"></div>
     </div>
 
     <div id="loading">
