Nom de l'application dans formulaire d'auth.
Affiche le nom de l'application courante (capitalisé) dans le formulaire
d'authentification, afin de permettre aux utilisateurs de se repérer
plus facilement.

Fait suite aux remarques de Gilles concernant le livecd Vigilo.

Change-Id: I93c0c1dfe71e0bc1a8e84d76380b5ecd0da8812a
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/658
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/common/login.html
+++ b/src/vigilo/themes/templates/common/login.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
-    <title>Login Form</title>
+    <title>${tg.config.app_name + ' - ' + l_('Login Form')}</title>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/lib/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/login.js')}"></script>
