--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -406,3 +406,8 @@ div.clearingdiv {
     width: 1.5em;
     height: 1.5em;
 }
+
+#details_maps {
+    padding-top: 1px;
+    padding-left: 10px;
+}
