Import/export de cartes dans VigiMap (#929).
Ajoute le support de l'import/export de cartes dans VigiMap.
Ajoute également la commande vigimap-backup permettant d'effectuer la
même action depuis la ligne de commandes.

Ce mécanisme peut être utilisé par les managers (IHM web) ou le
super-utilisateur "root" (CLI) pour effectuer des sauvegardes régulières
des cartes ou bien pour préparer des cartes statiques sur une
plate-forme de dév/intégration avant de les recopier sur la plate-forme
finale.

Mise à jour de la doc d'admin/util. afin de décrire cette nouvelle
fonctionnalité.

Change-Id: Idf46eabec6ddfcbe066da6ddf757935bcbcb451a
Refs: #929.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/802
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -29,6 +29,7 @@
 
     <script type="text/javascript">
         var can_edit = ${defined('can_edit') and can_edit or 0};
+        var is_manager = ${defined('is_manager') and is_manager or 0};
         var show_maptree = ${int(asbool(tg.config.get('show_maptree', True)))};
     </script>
 
