Choix des tailles de police dans VigiBoard (#1107)
Ajoute 3 nouvelles options dans VigiBoard afin de permettre la
personnalisation de la taille des polices, correspondant aux 3 boutons
dans l'interface.
Les nouvelles options sont :
- fontsize.small
- fontsize.medium
- fontsize.large

Ce changement supprime également l'option "vigiboard_font.size" du
fichier de configuration. La valeur de l'option était de toute façon
ignorée par le code.

NB : la valeur de l'option "fontsize.medium" sera utilisée comme valeur
par défaut lors de la connexion de l'utilisateur.

Change-Id: I3e10f68377da3e0d9ffeffaff3e9e787e24b15cd
Refs: #1107.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1010
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/toolbar.html
+++ b/src/vigilo/themes/templates/vigiboard/toolbar.html
@@ -32,13 +32,13 @@
     </div>
 
     <div class="header_item" id="font_size_selector">
-        <a href="javascript:change_fontsize('5px')">
+        <a href="javascript:change_fontsize('${tg.config.get('fontsize.small', '5px')}')">
             <img alt="Default font size" title="Default font size" src="${tg.url('/images/icn_text_sm.png')}" />
         </a>
-        <a href="javascript:change_fontsize('10px')">
+        <a href="javascript:change_fontsize('${tg.config.get('fontsize.medium', '10px')}')">
             <img alt="Medium font size" title="Medium font size" src="${tg.url('/images/icn_text_md.png')}" />
         </a>
-        <a href="javascript:change_fontsize('25px')">
+        <a href="javascript:change_fontsize('${tg.config.get('fontsize.large', '25px')}')">
             <img alt="Large font size" title="Large font size" src="${tg.url('/images/icn_text_lg.png')}" />
         </a>
     </div>
