Export CSV alertes de VigiBoard (#954).
Permet l'export des alertes (événements corrélés) affichés à l'écran au
format CSV. L'export tient compte des critères de recherche
éventuellement appliqués.

Refs: #954.
Change-Id: I3c6639dbef9ca53043d45d8a683f5c77619af23a
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1017
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -176,14 +176,9 @@
 
             <tr py:when="0" py:for="(index, event) in enumerate(page.items)" class="${['odd', 'even'][index % 2]}">
                 <py:for each="(plugin_name, plugin_instance) in config['columns_plugins']">
-                    <py:choose test="plugins_data.has_key(plugin_name)">
-                        <py:when test="True">
-                            ${plugin_data_functions[plugin_name](plugin_name, plugin_instance, event, plugins_data[plugin_name][event[0].idcorrevent])}
-                        </py:when>
-                        <py:otherwise>
-                            ${plugin_data_functions[plugin_name](plugin_name, plugin_instance, event, None)}
-                        </py:otherwise>
-                    </py:choose>
+                    ${plugin_data_functions[plugin_name](plugin_name, plugin_instance,
+                                                         plugin_instance.get_data(event),
+                                                         plugins_data[plugin_name].get(event[0].idcorrevent))}
                 </py:for>
             </tr>
         </tbody>
