--- a/src/vigilo/themes/templates/vigiboard/plugins/output.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/output.html
@@ -4,7 +4,7 @@
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="output_header(name, instance)">Output</th>
 
-<td class="plugin_${name}" py:def="output_data(name, instance, data, plugin_data)">${data[0].cause.message}</td>
+<td class="plugin_${name}" py:def="output_data(name, instance, data, plugin_data)">${data['output']}</td>
 
 <py:def function="plugin_template(name, instance)">
     <?python
@@ -14,4 +14,3 @@
 </py:def>
 
 </html>
-
