--- a/src/vigilo/themes/templates/vigiboard/plugins/priority.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/priority.html
@@ -5,9 +5,7 @@
 <th id="plugin_${name}" class="plugin_${name}" py:def="priority_header(name, instance)" title="ITIL Priority">Priority</th>
 
 <py:def function="priority_data(name, instance, data, plugin_data)">
-    <py:with vars="state = StateName.value_to_statename(data[0].cause.current_state)">
-        <td class="plugin_${name} ${state}">${data[0].priority}</td>
-    </py:with>
+    <td class="plugin_${name} ${data['state']}">${data['priority']}</td>
 </py:def>
 
 <py:def function="plugin_template(name, instance)">
@@ -18,4 +16,3 @@
 </py:def>
 
 </html>
-
