Contournement bug de Routes (#1149).
Contourne un bug de Routes (https://github.com/bbangert/routes/issues/7)
empêchant l'utilisation de "host" comme nom de paramètre (ce dont nous
avons besoin pour les pages de Nagios).
Le contournement consiste à :
- Reprendre le code de url() issu de TG 2.2.2 (licence MIT).
- Adapter les appels à url()/redirect() pour prendre en compte le
  changement d'API induit.

Change-Id: Ifba5073f6ccc7303bb8e22419699b7b1ad98ac53
Refs: #1149.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1125
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -70,8 +70,8 @@ ${toolbar()}
     <div py:strip="True" py:if="flash" py:content="XML(flash)" />
 </py:with>
 
-<div style="display: none" py:with="copy = search.copy(); dummy = copy.update(host=copy.pop('host_', None))">
-    ${search_form(copy)}
+<div style="display: none">
+    ${search_form(search)}
 </div>
 
 <script type="text/javascript">
