Revert "Contournement bug de Routes (#1149)."
Malheureusement ce commit introduit des régressions :
- éciture des URLs (les espaces vont se retrouver encoder avec %252B
au lieu de %2520).
- formulaire de recherche de vigiboard ne mémorise plus le champs
hôte (lorsque l'on re-ouvre le formulaire de recherche l'hôte
précédamment sélectionné devrait être présent)

This reverts commit 7ba13df28a8129db76f5f45730abb2d1da9a9aae

Refs: #1149
Change-Id: I17011323ca2c0d7ca3c20f2c7145fde31932562d
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1151
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Thomas BURGUIERE <thomas.burguiere@c-s.fr>

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -60,7 +60,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                href="${tg.url('/', {'params': fixed_search, 'page': page.previous_page})}">
+                                href="${tg.url('/', params=fixed_search, page=page.previous_page)}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
                         </py:choose>
@@ -79,7 +79,7 @@
                              </a>
 
                              <a py:otherwise=""
-                                href="${tg.url('/', {'params': fixed_search, 'page': page.next_page})}">
+                                href="${tg.url('/', params=fixed_search, page=page.next_page)}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
@@ -126,7 +126,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                href="${tg.url('/', {'params': fixed_search, 'page': page.previous_page})}">
+                                href="${tg.url('/', params=fixed_search, page=page.previous_page)}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/>
                             </a>
                         </py:choose>
@@ -145,7 +145,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                href="${tg.url('/', {'params': fixed_search, 'page': page.next_page})}">
+                                href="${tg.url('/', params=fixed_search, page=page.next_page)}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
