--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -16,11 +16,11 @@
         <p class="menu">
         [<a href="${tg.url('/nagios/%s/cgi-bin/status.cgi' %
                 urllib2.quote(host.encode('utf-8'), ''), {
-            'host': host,
+            'host_': host,
         })}">${l_('Monitoring page for "%s"') % host}</a>]
         <py:for each="h in presets">
             [<a href="${tg.url('/rpc/fullHostPage', {
-                'host': host,
+                'host_': host,
                 'duration': h['duration'],
             })}">${h['caption']}</a>]
         </py:for>
@@ -42,7 +42,7 @@
             <py:for each="graph in sorted(graphs, key=lambda x: x.name.lower())"
                 py:with="prefix = len(tg.url('/'))+1; graph_url = tg.url('/', {
                     'g': tg.url('/', {
-                        'host': host,
+                        'host_': host,
                         'graph': graph.name,
                         'start': start,
                         'duration': duration,
@@ -56,7 +56,7 @@
                     'graph': graph.name,
                 }}" src="${tg.url('/vigirrd/%s/index' %
                     urllib2.quote(host.encode('utf-8'), ''), {
-                'host': host,
+                'host_': host,
                 'graphtemplate': graph.name,
                 'start': start,
                 'duration': duration,
